# rust-bybit

./: Cargo.toml  LICENSE  README-zh_CN.md  README.md
.github/workflows/: ci.yaml
examples/: future_inverse_ws_api_client.rs  future_linear_ws_api_client.rs  inverse_private_ws_api_client.rs  inverse_public_ws_api_client.rs  linear_private_ws_api_client.rs  linear_public_ws_api_client.rs  local_orderbook.rs  option_ws_api_client.rs  private_ws_api_client.rs  public_v2_ws_api_client.rs  public_ws_api_client.rs  spot_local_order_book.rs  spot_ws_api_client.rs
src/: callback.rs  error.rs  lib.rs  util.rs
src/inverse/: mod.rs  ws.rs
src/linear/: mod.rs  ws.rs
src/spot/: mod.rs  ws.rs
src/ws/: callback.rs  future.rs  mod.rs  option.rs  private.rs  response.rs  spot.rs
tests/: inverse_ws.rs
