[package]
name = "rust-bybit"
version = "0.1.0-alpha.0"
license = "MIT"
authors = ["jukanntenn <jukanntenn@outlook.com>"]
edition = "2021"

description = "Rust API connector for Bybit's WebSockets APIs"
keywords = ["cryptocurrency", "trading", "bybit"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]
documentation = "https://docs.rs/crate/rust-bybit/"
repository = "https://github.com/yufuquant/rust-bybit"
readme = "README.md"

[lib]
name = "bybit"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde-aux = "3.1.0"
serde_json = "1.0"
thiserror = "1.0"
tungstenite = { version = "0.15.0", features = ["native-tls"] }
url = "2.1.0"
ring = "0.16.20"
hex = "0.4"
log = "0.4"
env_logger = "0.9.0"

[dev-dependencies]
env_logger = "0.9.0"