[package]
name = "rust-bybit"
version = "0.2.0"
license = "MIT"
authors = ["jukanntenn <jukanntenn@outlook.com>"]
edition = "2021"

description = "Rust API connector for Bybit's WebSocket V5 API"
keywords = ["cryptocurrency", "trading", "bybit"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]
documentation = "https://docs.rs/crate/rust-bybit/"
repository = "https://github.com/yufuquant/rust-bybit"
readme = "README.md"

[lib]
name = "bybit"
path = "src/lib.rs"

[dependencies]
tungstenite = { version = "0.18", features = ["native-tls"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ring = "0.16"
hex = "0.4"
log = "0.4"

[dev-dependencies]
env_logger = "0.10"